--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,20 @@
 			<artifactId>tweetnacl</artifactId>
 			<version>0.14.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/tweetnacl -->
+		<dependency>
+			<groupId>org.purejava</groupId>
+			<artifactId>tweetnacl-java</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
