--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,13 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.12</version>
+			<version>4.5.13</version>
 		</dependency>
-		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>tweetnacl</artifactId>
-			<version>0.14.3</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.webjars.bower</groupId>-->
+<!--			<artifactId>tweetnacl</artifactId>-->
+<!--			<version>0.14.3</version>-->
+<!--		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.webjars.bower/tweetnacl -->
 		<dependency>
 			<groupId>org.purejava</groupId>
