--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sdk</groupId>
-	<artifactId>accumulate</artifactId>
+	<artifactId>client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>accumulate</name>
+	<name>client</name>
 	<description>Demo project for Spring Boot</description>
 <!--	<properties>-->
 <!--		<java.version>11</java.version>-->
